# str-index

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: coverage.yml  tests.yml
src/: convert.rs  fmt.rs  lib.rs  ops.rs  serde.rs
tests/: serde.rs
