[package]
name = "str-index"
version = "1.0.0-dev"
edition = "2018"

authors = [
    "Aleksey Kladov <aleskey.kladov@gmail.com>",
    "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
    "cad97 <cad97@cad97.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
