[package]
name = "str-index"
version = "1.0.0-dev"
edition = "2018"

authors = [
    "Aleksey Kladov <aleskey.kladov@gmail.com>",
    "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
    "Christopher Durham <cad97@cad97.com>",
]
description = "String index and range vocabulary newtypes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CAD97/str-index/tree/master"
readme = "README.md"
keywords = ["span","codespan","compiler","source"]
categories = ["data-structures","no-std","parsing","rust-patterns"]

[dependencies]
